# llm_ft_ollama

./: .gitignore  Makefile  README.md  merge_lora.py  pyproject.toml  train.py
ollama-model/: Modelfile
